--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,11 +5,9 @@ jobs:
       - image: python:3.10
     steps:
       - checkout
-      - run: cd Python-OC-Lettings-FR-master
-      - run: ls
-      - run: pip install -r ./requirements.txt
+      - run: pip install -r requirements.txt
       - run: python manage.py migrate
-      - run: pytest --cov=myapp --cov-fail-under=80 --cov-report=term-missing
+      - run: pytest --cov-fail-under=80
       - run: flake8
       - run:
           name: Build and push Docker image
