--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,12 +9,12 @@ jobs:
       - run: python manage.py migrate
       - run: pytest --cov --cov-fail-under=80
       - run: flake8
+      -setup_remote_docker:
+          version: 20.10.23
       - run:
           name: Build and push Docker image
           command: |
             if [ "$CIRCLE_BRANCH" == "main" ]; then
-              sudo apt update
-              sudo apt install docker
               docker build -t your-image-name:$CIRCLE_SHA1 .
               docker login -u $DOCKER_HUB_USERNAME -p $DOCKER_HUB_PASSWORD
               docker push your-image-name:$CIRCLE_SHA1
