change config circle

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,7 @@ jobs:
           name: Build and push Docker image
           command: |
             if [ "$CIRCLE_BRANCH" == "main" ]; then
+              apt update
               curl -fsSL https://get.docker.com -o get-docker.sh
               sh get-docker.sh
               docker --version
