change circle config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,7 @@ jobs:
           command: |
             if [ "$CIRCLE_BRANCH" == "main" ]; then
               apt update
+              apt upgrade
               curl -fsSL https://get.docker.com -o get-docker.sh
               sh get-docker.sh
               docker --version
