--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
           command: |
             if [ "$CIRCLE_BRANCH" == "main" ]; then
               apt update
-              apt upgrade
+              apt -y upgrade
               curl -fsSL https://get.docker.com -o get-docker.sh
               sh get-docker.sh
               docker --version
