change config circle

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,7 @@ jobs:
             if [ "$CIRCLE_BRANCH" == "main" ]; then
               apt update
               apt upgrade
+              apt install docker
               curl -fsSL https://get.docker.com -o get-docker.sh
               sh get-docker.sh
               docker --version
