change config circle

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,8 @@ jobs:
           command: |
             if [ "$CIRCLE_BRANCH" == "main" ]; then
               apt update
-              apt install docker
+              apt -y upgrade
+              apt -y install docker
               curl -fsSL https://get.docker.com -o get-docker.sh
               sh get-docker.sh
               docker --version
