--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,13 +2,16 @@ version: 2
 jobs:
   build:
     docker:
-      - image: docker:latest
+      - image: cimg/python:3.10.1
     steps:
       - checkout
       - run: pip install -r requirements.txt
       - run: python manage.py migrate
       - run: pytest --cov --cov-fail-under=80
       - run: flake8
+      - setup_remote_docker:
+          version: 20.10.23
+          docker_layer_caching: true
       - run:
           name: Build and push Docker image
           command: |
