change config circle

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,9 +16,9 @@ jobs:
           name: Build and push Docker image
           command: |
             if [ "$CIRCLE_BRANCH" == "main" ]; then
-              docker build --build-arg ARG_DNS_SENTRY=$DNS_SENTRY --build-arg ARG_SECRET_KEY=$SECRET_KEY -t your-image-name:$CIRCLE_SHA1 .
+              docker build --build-arg ARG_DNS_SENTRY=$DNS_SENTRY --build-arg ARG_SECRET_KEY=$SECRET_KEY -t tobraider/projet13:$CIRCLE_SHA1 .
               docker login -u $DOCKER_HUB_USERNAME -p $DOCKER_HUB_PASSWORD
-              docker push your-image-name:$CIRCLE_SHA1
+              docker push tobraider/projet13:$CIRCLE_SHA1
             else
               echo "Skipping Docker build and push for branch $CIRCLE_BRANCH."
             fi
