--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
           name: Build and push Docker image
           command: |
             if [ "$CIRCLE_BRANCH" == "main" ]; then
-              apt install -y openssh-client
+              sudo apt install -y openssh-client
               echo $KEY_SSH | base64 -d > ~/.ssh/id_rsa
               chmod 600 ~/.ssh/id_rsa
               ssh-add ~/.ssh/id_rsa
