--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
           version: 20.10.23
           docker_layer_caching: true
       - run:
-          name: Build and push Docker image
+          name: Build and push Docker image on docker hub and server 
           command: |
             if [ "$CIRCLE_BRANCH" == "main" ]; then
               sudo apt install -y openssh-client
