--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
               echo $KEY_SSH | base64 -d > ~/.ssh/id_rsa
               chmod 600 ~/.ssh/id_rsa
               ssh-add ~/.ssh/id_rsa
-              docker build --build-arg ARG_DNS_SENTRY=$DNS_SENTRY --build-arg ARG_SECRET_KEY=$SECRET_KEY --build-arg DEBUG=$DEBUG --build-arg IPPORD=$IPPORD -t tobraider/projet13:$CIRCLE_SHA1 .
+              docker build --build-arg ARG_DNS_SENTRY=$DNS_SENTRY --build-arg ARG_SECRET_KEY=$SECRET_KEY --build-arg DEBUG=$DEBUG --build-arg IPPROD=$IPPROD -t tobraider/projet13:$CIRCLE_SHA1 .
               docker login -u $DOCKER_HUB_USERNAME -p $DOCKER_HUB_PASSWORD
               docker push tobraider/projet13:$CIRCLE_SHA1
               ssh -v -o StrictHostKeyChecking=no -p 18740 tobie@51.159.76.154 "source startapp.sh $CIRCLE_SHA1"
